added html and pdf versions of chapter 1 sections

--- a/htmls/1/1_1_help_me_hide_my_code.html
+++ b/htmls/1/1_1_help_me_hide_my_code.html
@@ -25,18 +25,18 @@
     <body class="vscode-light">
         <div dir="rtl">
 <h2 id="کمکم-کن-کدم-رو-مخفی-کنم">کمکم کن کدم رو مخفی کنم</h2>
-<p>در ده سال گذشته، هر دوی ما وقت به نسبت خوبی رو صرف سخنرانی در کنفرانس های مربوط به برنامه نویسی کردیم. بعد ازینکه در سال 2006 سرویس
+<p>در ده سال گذشته، هر دوی ما وقت به نسبت خوبی را صرف سخنرانی در کنفرانس های مربوط به برنامه نویسی کردیم. بعد از این که در سال 2006 سرویس
 Project Hosting
-رو به صورت متن باز از طرف گوگل عرضه کردیم، با سوال ها و درخواست های زیادی در موردش مواجه شدیم. اواسط سال 2008 یه روند کلی در کل این سوال ها به وضوح مشهود بود:</p>
+را به صورت متن باز از طرف گوگل عرضه کردیم، با سوال ها و درخواست های زیادی روبرو شدیم. اواسط سال 2008 یه روند کلی در کل این سوال ها به وضوح مشهود بود:</p>
 <ul>
 <li>میشه لطفا این قابلیت رو به Subversion اضافه کنید تا بعضی از branchها از دید بقیه مخفی باشند؟</li>
 <li>می تونین این امکان رو فراهم کنید که پروژه های متن باز در ابتدا مخفی و خصوصی باشند ولی وقتی آماده شدن بشه اونا رو عمومی و در دسترس همه قرار داد؟</li>
 <li>من میخوام تمام کدم رو از اول بنویسم. میشه کمک کنید تمام نسخه ها و تاریخچه کدهای گذشته من پاک بشن؟</li>
 </ul>
-<p>وجه مشترک تمام این درخواست ها رو متوجه میشین؟
+<p>وجه مشترک تمام این درخواست ها رو متوجه می شوید؟
 <br>
-جواب مشخصه: عدم اعتماد به نفس.</p>
-<p>افراد ازینکه بقیه کار ناتمام و در حال پیشرفتشون رو ببینن، واهمه دارن. به نظر منطقی میاد و بخشی از طبیعت انسان همینه. هیچ کس دوست نداره ازش انتقاد بشه، مخصوصا در مورد کارهایی که هنوز کاملا تمام نشدند. این نحوه نگرش افراد ولی یه سر نخ کلی به ما در مورد دنیای برنامه نویسی داد. این عدم اعتماد به نفس، در واقع یک نشانه هست از وجود یک مساله وسیع تر.</p>
+جواب مشخص است: عدم اعتماد به نفس.</p>
+<p>افراد ازینکه بقیه کار ناتمام و در حال پیشرفتشان را ببینند، واهمه دارند. به نظر منطقی می آید و بخشی از طبیعت انسان هم همین است. هیچ کس دوست ندارد مورد انتقاد قرار بگیرد، مخصوصاً در مورد کارهایی که هنوز کاملاً تمام نشدند. این نحوه نگرش افراد ولی یک سر نخ کلی به ما در مورد دنیای برنامه نویسی داد. این عدم اعتماد به نفس، در واقع یک نشانه هست از وجود یک مساله وسیع تر.</p>
 </div>
     </body>
     </html>
