--- a/htmls/1/1_7_next_steps.html
+++ b/htmls/1/1_7_next_steps.html
@@ -25,11 +25,11 @@
     <body class="vscode-light">
         <div dir="rtl">
 <h2 id="قدمهای-بعد">قدم‌های بعد</h2>
-<p>اگه تا اینجای کتاب با ما همراه بودین، در مسیر رسیدن به
+<p>اگر تا اینجای کتاب با ما همراه بودید، در مسیر رسیدن به
 &quot;هنر کار کردن با دیگران&quot;
-قرار دارید. شما قطعا باید با تمرکز و بررسی رفتارهای شخصی خودتون شروع کنید. وقتی مهارتهایی که در این فصل بیان شد رو در زندگی روزمره خودتون استفاده کنید، متوجه خواهید شد که همکاری شما با هم تیمی هاتون طبیعی تر خواهد شد و کارآیی تیمتون بالاتر خواهد رفت.</p>
+قرار دارید. شما قطعاً باید با تمرکز و بررسی رفتارهای شخصی خودتون شروع کنید. وقتی مهارت هایی که در این فصل بیان شد را در زندگی روزمره خودتان استفاده کنید، متوجه خواهید شد که همکاری شما با هم تیمی هایتان طبیعی تر خواهد شد و کارآیی تیمتون بالاتر خواهد رفت.</p>
 <p>تغییرات مهم همیشه با خود شما شروع می شوند و به دیگران سرایت پیدا می کنند.</p>
-<p>در فصل آینده، در مورد این موضوع صحبت خواهیم کرد که چطور میشه فرهنگ تیمی رو بر اساس اصول HRT
+<p>در فصل آینده، در مورد این موضوع صحبت خواهیم کرد که چطور می توان فرهنگ تیمی را بر اساس اصول HRT
 ارتقا داد.</p>
 </div>
 
