fixed minor typo

--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
                 <h1>یک دست صدا ندارد</h1>
                 <h2>راهنمایی برای کار گروهی بهتر</h2>
                 <h3>
-                  با بیشن از بیست سال سابقه در مهندسی نرم‌افزار و رهبری تیم‌های کوچک و بزرگ، 
+                  با بیش از بیست سال سابقه در مهندسی نرم‌افزار و رهبری تیم‌های کوچک و بزرگ، 
                   Brian Fitzpatrick
                   و 
                   Ben Collins-Sussman
