updated the book image

--- a/web/index.html
+++ b/web/index.html
@@ -39,15 +39,6 @@
 <!--Hero section-->
 <section class="hero" id="Home">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="logo"> 
-          <!--logo--> 
-          <a href=""><img src="img/logo.png" data-at2x="img/logo@2x.png" alt="site name"> </a> 
-          <!--logo end--> 
-        </div>
-      </div>
-    </div>
     <div class="row" data-0="opacity: 1" data-800="opacity: 0">
       <div class="col-md-7"> 
         <!--welcome message-->
@@ -295,7 +286,7 @@
         <div class="text-center">
           <p>
             <span dir="rtl" lang="fa-IR">
-              جهت ارتباط به مترجمان می توانید از فرم زیر استفاده کنید. 
+              جهت ارتباط با مترجمان می توانید از فرم زیر استفاده کنید. 
             </span>
           </p>
         </div>
