added netlify tag to the contact form

--- a/web/index.html
+++ b/web/index.html
@@ -403,7 +403,7 @@
         <!--contact form-->
         
         <div class="contact-form">
-          <form role="form" action="php/contact-me.php" method="post" id="contact-form">
+          <form role="form" action="php/contact-me.php" method="post" id="contact-form" netlify>
             <input type="text" dir="rtl" class="form-control" name="name" id="name" placeholder="نام و نام‌خانوادگی" required>
             <input type="email" dir="rtl" class="form-control" name="email" id="email" placeholder="آدرس ایمیل" required>
             <textarea dir="rtl" class="form-control" name="message" id="message" rows="4" placeholder="پیام خود را این‌جا بنویسید..." required></textarea>
