added netlify tag to the subcription form

--- a/web/index.html
+++ b/web/index.html
@@ -259,7 +259,7 @@
     <div class="row">
       <div class="slide-bottom col-md-8"> <img src="img/ebook-preview.png" alt="ebook preview" data-no-retina> </div>
       <div class="col-md-4">
-        <form role="form" id="mc-form">
+        <form role="form" id="mc-form" netlify>
           <div>
             <input type="text" dir="rtl" class="slide-bottom form-control" placeholder="نام" name="fname" required id="mailchimp-fname">
             <i class="fa fa-user first-name-i"></i></div>
@@ -401,7 +401,6 @@
       <div class="col-md-8 col-sm-11 center-block"> 
         
         <!--contact form-->
-        
         <div class="contact-form">
           <form role="form" action="php/contact-me.php" method="post" id="contact-form" netlify>
             <input type="text" dir="rtl" class="form-control" name="name" id="name" placeholder="نام و نام‌خانوادگی" required>
