made subscribe form work

--- a/web/index.html
+++ b/web/index.html
@@ -261,19 +261,13 @@
       <div class="col-md-4">
         <form role="form" id="mc-form" netlify>
           <div>
-            <input type="text" dir="rtl" class="slide-bottom form-control" placeholder="نام" name="fname" required id="mailchimp-fname">
-            <i class="fa fa-user first-name-i"></i></div>
-          <div>
-            <input type="text" dir="rtl" class="slide-bottom form-control" placeholder="نام خانوادگی" name="lname" required id="mailchimp-lname">
-            <i class="fa fa-user last-name-i"></i></div>
-          <div>
             <input type="email" dir="rtl" class="slide-bottom form-control" placeholder="آدرس ایمیل" required name="email" id="mailchimp-email">
             <i class="fa fa-envelope"></i></div>
           <button type="submit" dir="rtl" class="slide-bottom btn btn-default">ثبت‌نام</button>
         </form>
         <div class="result">
-          <div class="sub-form-error"><i class="fa fa-exclamation-triangle"></i> Please enter a value.</div>
-          <div class="sub-form-success"><i class="fa fa-envelope"></i> Awesome! We sent you a confirmation email.</div>
+          <div class="sub-form-error"><i class="fa fa-exclamation-triangle"></i> You are already subscribed!</div>
+          <div class="sub-form-success"><i class="fa fa-envelope"></i> Awesome! </div>
         </div>
       </div>
     </div>
