added ajax calls to count and display number of downloads

--- a/web/index.html
+++ b/web/index.html
@@ -107,7 +107,7 @@
         <!--welcome message end--> 
         
         <!--action button-->
-        <div class="action-button"> <a href="#Features" class="button learn-more text-center">اطلاعات بیشتر<i class="fa fa-arrow-right"></i></a> <a href="#" class="button download text-center">دانلود کتاب<i class="fa fa-download"></i></a>
+        <div class="action-button"> <a href="#Features" class="button learn-more text-center">اطلاعات بیشتر<i class="fa fa-arrow-right"></i></a> <a href="#" id="dlbtn" class="button download text-center">دانلود کتاب<i class="fa fa-download"></i></a>
           <p><small>&copy; Creative Commons Attribution- Noncommercial-ShareAlike</small></p>
         </div>
         <!--action button end--> 
