--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-0BGE5PYTHW');
 </script>
 
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,600,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300,600,700" rel="stylesheet">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Debugging Teams</title>
