--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Debugging Teams</title>
-<meta name="description" content="Farsi Translation of the Book: Debuggint Teams">
+<meta name="description" content="Farsi Translation of the Book: Debugging Teams">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <link href="css/styles.min.css" rel="stylesheet">
