--- a/web/index.html
+++ b/web/index.html
@@ -119,9 +119,10 @@
         
         <!--action button-->
         <div class="action-button"> 
-          <a href="#Features" class="button learn-more text-center">اطلاعات بیشتر<i class="fa fa-arrow-right"></i></a> 
+          <!-- <a href="#Features" class="button learn-more text-center">اطلاعات بیشتر<i class="fa fa-arrow-right"></i></a> -->
+          <a href="#" class="button learn-more epub text-center">ePUB دانلود کتاب<i class="fa fa-download"></i></a> 
           <!-- <a href="book.html" class="button learn-more text-center">مطالعه آنلاین<i class="fa fa-chevron-up"></i></a>-->
-          <a href="#" id="dlbtn" class="button download text-center">دانلود کتاب<i class="fa fa-download"></i></a>          
+          <a href="#" id="dlbtn" class="button download text-center">PDF دانلود کتاب<i class="fa fa-download"></i></a>          
           <p><small>&copy; Creative Commons Attribution- Noncommercial-ShareAlike</small></p>
         </div>
         <!--action button end--> 
