--- a/translations/index_split_112.html
+++ b/translations/index_split_112.html
@@ -7,5 +7,5 @@
 <link rel="stylesheet" type="text/css" href="page_styles.css"/>
 </head>
   <body class="calibre">
-<dl id="note_3" class="footnote"><dt class="calibre65">[<a href="index_split_003.html#back_note_3" title="3" class="calibre2">←3</a>]</dt><dd class="calibre66"><p dir="rtl" class="block_94"><span class="text_44" dir="ltr"></span><span class="text_44">. </span><span class="text_47" dir="ltr">Version Control</span><span class="text_47">؛ها به سیستم‌هایی مثل </span><span class="text_47" dir="ltr">Github</span><span class="text_47"> یا </span><span class="text_47" dir="ltr">Bitbucket</span><span class="text_47"> گفته می‌شود که به ‌برنامه‌نویسان کمک می‌کند به صورت اشتراکی روی یک پروژه کار کنند و به تاریخچۀ کدهای نوشته‌شده دسترسی داشته باشند. </span></p></dd></dl>
+<dl id="note_3" class="footnote"><dt class="calibre65">[<a href="index_split_003.html#back_note_3" title="3" class="calibre2">←3</a>]</dt><dd class="calibre66"><p dir="rtl" class="block_94"><span class="text_44" dir="ltr"></span><span class="text_44">. </span><span class="text_47" dir="ltr">Version Control</span><span class="text_47">؛ها به سیستم‌هایی مثل </span><span class="text_47" dir="ltr">Git</span><span class="text_47"> گفته می‌شود که به ‌برنامه‌نویسان کمک می‌کند به صورت اشتراکی روی یک پروژه کار کنند و به تاریخچۀ کدهای نوشته‌شده دسترسی داشته باشند. </span></p></dd></dl>
 </body></html>
